--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,11 +3,16 @@
     <%= image_tag("danish_flag.gif", options={}) %>
     Danebook
   </a>
-  <form action="#" role='search' class='navbar-form search-bar'>
-    <div class="form-group">
-      <input type="text" class='form-control' placeholder='Search for users' disabled>
-    </div>
-  </form>
+  <%= form_tag users_path, method: :get, class: "navbar-form search-bar" do %>
+    <label for="search">Find a user:</label>
+    <%= text_field_tag(
+      :search,
+      params[:search],
+      placeholder: "Type in someone's first name",
+      class: "form-control"
+    ) %>
+  <% end %>
+  <strong><%= link_to "Find Friends", users_path, class: "navbar-text" %></strong>
   <% if current_user %>
     <p class="navbar-text navbar-right white-nav-text">
       <%= link_to current_user.name, current_user %> | <%= link_to "Log out", logout_path %>
