Async flash messages for posts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,10 @@
 
   <body>
     <%= render "shared/header" %>
-    <%= render "shared/flash_messages" %>
+    <div id="flash">
+      <%= render 'shared/flash_messages' %>
+    </div>
 
-    
     <%= yield %>
   </body>
 </html>
