--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -62,6 +62,15 @@ $danish-flag: #c60c30;
   }
 }
 
+/* flash */
+
+#flash {
+  position: fixed;
+  width: 98%;
+  margin: 1%;
+  z-index: 1000;
+}
+
 /* sign up */
 
 .sign-up {
