--- a/app/views/layouts/new_user.html.erb
+++ b/app/views/layouts/new_user.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <%= render "shared/flash_messages" %>
+    <%= render 'shared/flash_messages' %>
     <%= yield %>
   </body>
 </html>
