--- a/app/views/posts/_show.html.erb
+++ b/app/views/posts/_show.html.erb
@@ -1,4 +1,4 @@
-<div class="danebook-post panel panel-default">
+<div class="danebook-post panel panel-default" data-id="<%= post.id %>">
   <div class="media">
     <div class="media-left">
       <a href="#">
@@ -19,7 +19,7 @@
     <% else %>
       <%= link_to "Like", post_like_path(post), class: "like" %>
     <% end %>
-    <%= link_to "Delete", post_path(post), method: :delete, class: "pull-right" %>
+    <%= link_to "Delete", post_path(post), method: :delete, remote: true, class: "pull-right" %>
 
     <%= render partial: 'likes/index', locals: { likes: post.likes } %>
     <%= render partial: 'comments/show', collection: post.comments, as: :comment %>
