--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,10 +8,12 @@
     </div>
     <div class="col-sm-8">
       <%= render 'posts/authoring_box' if @user == current_user %>
-      <%= render partial: 'posts/show', collection: @posts, as: :post %>
-      <% if @posts.length == 0 %>
-        <p class="text-center" style="margin-top: 2em">This user has no posts.</p>
-      <% end %>
+      <div id="posts">
+        <%= render partial: 'posts/show', collection: @posts, as: :post %>
+        <% if @posts.length == 0 %>
+          <p class="text-center" style="margin-top: 2em">This user has no posts.</p>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
