--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,3 +1,9 @@
 <% flash.each do |type, msg| %>
-  <%= content_tag(:div, join_messages(msg), class: "alert alert-#{type}") %>
+  <% if msg.class == Array %>
+    <% msg.each do |string| %>
+      <%= render partial: 'shared/flash_message', locals: { msg: string, type: type } %>
+    <% end %>
+  <% else %>
+    <%= render partial: 'shared/flash_message', locals: { msg: msg, type: type } %>
+  <% end %>
 <% end %>
