Async like/unlike for posts and comments

--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,5 +1,5 @@
 (function() {
-  var $parentPostComments = $('.danebook-post[data-id=<%= @post.id %>] .comments');
+  var $parentPostComments = $('.post[data-id=<%= @post.id %>] .comments');
   $("<%= j( render partial: 'show', locals: { comment: @comment }) %>").hide().appendTo($parentPostComments).slideDown();
   console.log($parentPostComments)
   $parentPostComments.siblings('.new_comment').find('input.form-control').val('');
