--- a/app/views/posts/destroy.js.erb
+++ b/app/views/posts/destroy.js.erb
@@ -1,1 +1,1 @@
-$('.danebook-post[data-id=<%= @post.id %>]').slideUp(function() { $(this).remove() });
+$('.post[data-id=<%= @post.id %>]').slideUp(function() { $(this).remove() });
