--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -332,9 +332,12 @@ table td:first-of-type {
   display: flex;
   flex-wrap: wrap;
 }
-.danebook-post .media-heading {
+.post .media-heading {
   padding-top: .25em;
 }
 .like {
   margin-right: .75em;
+}
+.post-likes, .comment-likes {
+  display: inline;
 }
