--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -3,9 +3,9 @@
   <div class="comment-body"><%= comment.body %></div>
   <%= link_to 'Delete', comment_path(comment), method: :delete, remote: true if comment.user == current_user %>
   <% if current_user_likes?(comment) %>
-    <%= link_to "Unlike", comment_unlike_path(comment), class: "like" %>
+    <%= link_to "Unlike", comment_unlike_path(comment), class: "like comment-like", remote: true %>
   <% else %>
-    <%= link_to "Like", comment_like_path(comment), class: "like" %>
+    <%= link_to "Like", comment_like_path(comment), class: "like comment-like", remote: true %>
   <% end %>
   <%= render partial: 'likes/index', locals: { likes: comment.likes } %>
 </div>
