--- a/app/views/posts/_show.html.erb
+++ b/app/views/posts/_show.html.erb
@@ -1,4 +1,4 @@
-<div class="danebook-post panel panel-default" data-id="<%= post.id %>">
+<div class="post panel panel-default" data-id="<%= post.id %>">
   <div class="media">
     <div class="media-left">
       <a href="#">
@@ -15,13 +15,15 @@
   </div>
   <div class="panel-footer">
     <% if current_user_likes?(post) %>
-      <%= link_to "Unlike", post_unlike_path(post), class: "like" %>
+      <%= link_to "Unlike", post_unlike_path(post), class: "like post-like", remote: true %>
     <% else %>
-      <%= link_to "Like", post_like_path(post), class: "like" %>
+      <%= link_to "Like", post_like_path(post), class: "like post-like", remote: true %>
     <% end %>
     <%= link_to "Delete", post_path(post), method: :delete, remote: true, class: "pull-right" %>
 
-    <%= render partial: 'likes/index', locals: { likes: post.likes } %>
+    <div class="post-likes">
+      <%= render partial: 'likes/index', locals: { likes: post.likes } %>
+    </div>
     <div class="comments">
       <%= render partial: 'comments/show', collection: post.comments, as: :comment %>
     </div>
